--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ six==1.16.0
 smmap==5.0.1
 streamlit==1.31.1
 streamlit-lottie==0.0.5
+streamlit-pdf-viewer==0.0.8
 tenacity==8.2.3
 toml==0.10.2
 toolz==0.12.1
